icon alignment correction

--- a/packages/components/src/components/post-back-to-top/post-back-to-top.scss
+++ b/packages/components/src/components/post-back-to-top/post-back-to-top.scss
@@ -26,7 +26,9 @@ tokens.$default-map: components.$post-floating-button;
       tokens.get('post-floating-button-enabled-border');
     color: tokens.get('post-floating-button-enabled-fg');
     background-color: tokens.get('post-floating-button-enabled-bg');
-
+    display: flex;
+    align-items: center;
+    justify-content: center;
     &:hover {
       border-color: tokens.get('post-floating-button-hover-border');
       color: tokens.get('post-floating-button-hover-fg');
